# django_logging

./: .gitignore  .pre-commit-config-ci.yaml  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENCE  README.md  SECURITY.md  pyproject.toml  tox.ini
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  release.yml
django_logging/: apps.py  urls.py
django_logging/constants/: __init__.py  ansi_colors.py  config_types.py  date_format_directives.py  default_settings.py  defaults.py  email_settings.py  format_options.py  format_specifiers.py  log_format_options.py  log_format_specifiers.py  required_email_settings.py  settings_types.py
django_logging/contextvar/: __init__.py  contextvar_manager.py
django_logging/decorators/: __init__.py  execution_tracking.py
django_logging/filters/: __init__.py  context_filter.py  log_level_filter.py
django_logging/formatters/: __init__.py  base.py  colored_formatter.py  colorized_formatter.py  flat_formatter.py  json_formatter.py  xml_formatter.py
django_logging/handlers/: __init__.py  email_handler.py
django_logging/management/commands/: generate_pretty_json.py  generate_pretty_xml.py  logs_size_audit.py  send_logs.py
django_logging/middleware/: __init__.py  base.py  monitor_log_size.py  request_middleware.py
django_logging/settings/: checks.py  conf.py  manager.py
django_logging/static/LogiBoard/css/: app.css  error_response.css
django_logging/static/LogiBoard/js/: scripts.js
django_logging/templates/: email_notifier_template.html  error_response.html  log_iboard.html
django_logging/tests/: conftest.py  constants.py  settings_configuration.py  setup.py
django_logging/tests/commands/: test_generate_pretty_json.py  test_generate_pretty_xml.py  test_logs_size_audit.py  test_send_logs.py
django_logging/tests/contextvar/: test_contextvar_manager.py
django_logging/tests/decorators/: test_execution_tracking.py
django_logging/tests/filters/: test_log_level_filter.py
django_logging/tests/fixtures/: __init__.py  commands_fixture.py  conf_fixture.py  email_notifier_fixture.py  email_settings_fixture.py  formatters.py  log_record_fixture.py  request_middleware_fixture.py  settings_fixture.py  setup_django.py  views_fixture.py
django_logging/tests/formatters/: test_base_formatter.py  test_colored_formatter.py  test_flat_line_formatter.py  test_json_formatter.py  test_xml_formatter.py
django_logging/tests/handlers/: test_email_handler.py
django_logging/tests/middleware/: test_base_middleware.py  test_monitor_log_size.py  test_request_middleware.py
django_logging/tests/settings/: test_checks.py  test_conf.py
django_logging/tests/utils/: test_context_manager.py  test_email_notifier.py  test_get_conf.py  test_log_and_notify.py  test_process_file.py  test_set_conf.py
django_logging/tests/validators/: test_config_validators.py  test_email_settings_validator.py
django_logging/tests/views/: test_log_iboard.py
django_logging/utils/: colorizer.py  console_colorizer.py  context_manager.py  email_notifier.py  get_conf.py  get_config.py  log_and_notify.py  set_conf.py  setup_conf.py  setup_logging.py  time.py
django_logging/utils/command/: process_file.py
django_logging/utils/email/: __init__.py
django_logging/utils/log_email_notifier/: __init__.py  log_and_notify.py  notifier.py
django_logging/validators/: config_validators.py  email_settings_validator.py
django_logging/views/: log_iboard.py
docs/: conf.py  contributing.rst  index.rst  log_iboard.rst  quick_start.rst  rules.rst  settings.rst  usage.rst
tests/: conftest.py
tests/commands/: test_send_logs.py
tests/filters/: test_log_level_filter.py
tests/fixtures/: __init__.py  colored_formatter_fixture.py  email_handler_fixture.py  email_notifier_fixture.py  log_and_notify_fixture.py  log_record_fixture.py  logger_fixture.py  settings_fixture.py
tests/formatters/: test_colored_formatter.py
tests/handlers/: test_email_handler.py
tests/middleware/: test_request_middleware.py
tests/settings/: test_checks.py  test_conf.py
tests/utils/: test_context_manager.py  test_email_notifier.py  test_get_conf.py  test_log_and_notify.py  test_set_conf.py
tests/validators/: test_config_validators.py  test_email_settings_validator.py
