[tool.poetry]
name = "django-logging"
version = "0.1.0"
description = "A package for logging in django applications"
authors = ["ARYAN-NIKNEZHAD <aryan513966@gmail.com>", "MEHRSHAD-MIRSHEKARY"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = ">=3.2,<6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
